Performance enhancement: relation queries on loading DSE

--- a/k8s/charts/meerkat-dsa/values.yaml
+++ b/k8s/charts/meerkat-dsa/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 image:
   repository: wildboarsoftware/meerkat-dsa
-  pullPolicy: IfNotPresent
+  pullPolicy: Always # TODO: Change this to IfNotPresent after Beta is over.
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
