Use Azure Application Insights telemetry

--- a/.env
+++ b/.env
@@ -60,3 +60,4 @@ LC_ALL=en_US.utf8
 LANG=en_US.utf8
 # See: https://www.prisma.io/docs/concepts/components/prisma-client/debugging
 # DEBUG=*
+MEERKAT_TEST_TELEMETRY=1 # Undocumented.
