--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@wildboar/ldap": "^1.2.7",
     "@wildboar/scrypt-0": "^1.0.2",
     "@wildboar/x500": "^1.0.43",
+    "applicationinsights": "^2.2.2",
     "asn1-ts": "^7.0.1",
     "axios": "^0.24.0",
     "chalk": "^4.1.2",
@@ -46,6 +47,7 @@
     "date-fns": "^2.28.0",
     "escape-html": "^1.0.3",
     "fast-levenshtein": "^3.0.0",
+    "flat": "^5.0.2",
     "hbs": "^4.2.0",
     "i18n-iso-countries": "^7.2.0",
     "i18next": "^21.6.4",
@@ -76,6 +78,7 @@
     "@types/escape-html": "^1.0.1",
     "@types/express": "^4.17.13",
     "@types/fast-levenshtein": "^0.0.2",
+    "@types/flat": "^5.0.2",
     "@types/jest": "27.0.2",
     "@types/js-yaml": "^4.0.5",
     "@types/json-schema": "^7.0.9",
@@ -95,9 +98,9 @@
     "prettier": "2.3.2",
     "prisma": "^3.10.0",
     "sloc": "^0.2.1",
-    "tslib": "^2.3.1",
     "ts-jest": "27.0.5",
     "ts-node": "~10.1.0",
+    "tslib": "^2.3.1",
     "typescript": "4.3.5"
   },
   "prisma": {
