Make tlsOptional configurable

--- a/.env
+++ b/.env
@@ -61,3 +61,4 @@ LANG=en_US.utf8
 # See: https://www.prisma.io/docs/concepts/components/prisma-client/debugging
 # DEBUG=*
 MEERKAT_TEST_TELEMETRY=1 # Undocumented.
+MEERKAT_CHAINING_TLS_OPTIONAL=1
