Use GitHub Environment

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
   # TODO: Test
   Deploy:
     runs-on: ubuntu-latest
+    environment: production
     strategy:
       fail-fast: false
       matrix:
