--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,8 @@ on:
 
 env:
   CLUSTER_NAME: meerkat-helm-test
-  RESOURCE_GROUP: production
+  # RESOURCE_GROUP: production
+  RESOURCE_GROUP: meerkat-helm-test
   NAMESPACE: test
   ZONE: mkdemo.wildboar.software
 
