GitHub build job

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,14 +11,81 @@ env:
   RESOURCE_GROUP: meerkat-helm-test
   NAMESPACE: test
   ZONE: mkdemo.wildboar.software
+  STORAGE_ACCOUNT_NAME: meerkatdsahelmtest
+  CHART_CONTAINER: asdf
 
 jobs:
-  # TODO: Build
-  # TODO: Dockerize
-  # TODO: Publish Helm
-  # TODO: Test
-  Deploy:
+  build:
     runs-on: ubuntu-latest
+    environment: production
+    strategy:
+      fail-fast: false
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Determine Meerkat DSA Version
+        run: |
+            echo "PUBLISHING_MEERKAT_VERSION=$(cat k8s/charts/meerkat-dsa/Chart.yaml | grep appVersion | sed 's/appVersion: //' | sed 's/\r$//')" >> $GITHUB_ENV
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '17'
+      - name: Install NPM Packages
+        uses: npm ci
+      - name: Compile Meerkat DSA
+        run: npx nx run meerkat:build:production --skip-nx-cache
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/meerkat-dsa:latest,${{ secrets.DOCKERHUB_USERNAME }}/meerkat-dsa:${{ env.PUBLISHING_MEERKAT_VERSION }}
+
+  helm:
+    runs-on: ubuntu-latest
+    environment: production
+    strategy:
+      fail-fast: false
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Create the Helm Package
+        run: helm package .
+        working-directory: ./k8s/charts/meerkat-dsa
+      - name: Create the Helm Index
+        run: helm repo index . --url https://${{ env.STORAGE_ACCOUNT_NAME }}.blob.core.windows.net/${{ env.CHART_CONTAINER }}
+        working-directory: ./k8s/charts/meerkat-dsa
+      - name: Upload Helm Packages
+        uses: bacongobbler/azure-blob-storage-upload@main
+        with:
+          source_dir: ./k8s/charts/meerkat-dsa
+          container_name: ${{ env.CHART_CONTAINER }}
+          connection_string: https://${{ env.STORAGE_ACCOUNT_NAME }}.blob.core.windows.net/${{ env.CHART_CONTAINER }}
+          extra_args: '--pattern index.yaml'
+          overwrite: 'true'
+      - name: Upload Helm Index
+        uses: bacongobbler/azure-blob-storage-upload@main
+        with:
+          source_dir: ./k8s/charts/meerkat-dsa
+          container_name: ${{ env.CHART_CONTAINER }}
+          connection_string: https://${{ env.STORAGE_ACCOUNT_NAME }}.blob.core.windows.net/${{ env.CHART_CONTAINER }}
+          extra_args: '--pattern index.yaml'
+          overwrite: 'true'
+
+  # TODO: Publish Helm
+  # TODO: Create Test DIT
+  # TODO: Test
+  deploy:
+    runs-on: ubuntu-latest
+    needs:
+      - build
+      - helm
     environment: production
     strategy:
       fail-fast: false
@@ -29,8 +96,8 @@ jobs:
           # - 'ru'
           # - 'ru-moscow'
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      # - name: Checkout
+      #   uses: actions/checkout@v2
       - name: Login to Azure
         uses: azure/login@v1
         with:
