--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,8 @@ jobs:
           node-version: '17'
       - name: Install NPM Packages
         run: npm ci
+      - name: Generate Prisma Client
+        run: npx -q prisma generate
       - name: Compile Meerkat DSA
         run: npx nx run meerkat:build:production --skip-nx-cache
       - name: Set up Docker Buildx
