--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     },
     "private": true,
     "dependencies": {
+        "@docusaurus/core": "2.0.0-beta.13",
+        "@docusaurus/preset-classic": "2.0.0-beta.13",
+        "@mdx-js/react": "^1.6.21",
         "@nestjs/common": "^8.4.1",
         "@nestjs/config": "^2.0.0",
         "@nestjs/core": "^8.4.1",
@@ -43,6 +46,7 @@
         "chalk": "^4.1.2",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.13.2",
+        "clsx": "^1.1.1",
         "commander": "^9.1.0",
         "date-fns": "^2.28.0",
         "escape-html": "^1.0.3",
@@ -58,6 +62,9 @@
         "os-locale": "^5.0.0",
         "pem-ts": "^3.0.0",
         "phone": "^3.1.14",
+        "prism-react-renderer": "^1.2.1",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.5.5",
         "safe-timers": "1.1.0",
@@ -69,6 +76,7 @@
         "yargs": "^17.3.1"
     },
     "devDependencies": {
+        "@docusaurus/module-type-aliases": "2.0.0-beta.13",
         "@nrwl/cli": "13.4.2",
         "@nrwl/eslint-plugin-nx": "13.4.2",
         "@nrwl/jest": "13.4.2",
@@ -77,6 +85,7 @@
         "@nrwl/nx-cloud": "13.0.2",
         "@nrwl/tao": "13.4.2",
         "@nrwl/workspace": "13.4.2",
+        "@nx-plus/docusaurus": "^13.0.0",
         "@types/escape-html": "^1.0.1",
         "@types/express": "^4.17.13",
         "@types/fast-levenshtein": "^0.0.2",
