--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,13 +41,13 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: wildboarsoftware
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/meerkat-dsa:latest,${{ secrets.DOCKERHUB_USERNAME }}/meerkat-dsa:${{ env.PUBLISHING_MEERKAT_VERSION }}
+          tags: wildboarsoftware/meerkat-dsa:latest,wildboarsoftware/meerkat-dsa:${{ env.PUBLISHING_MEERKAT_VERSION }}
 
   helm:
     runs-on: ubuntu-latest
@@ -69,7 +69,7 @@ jobs:
           source_dir: ./k8s/charts/meerkat-dsa
           container_name: ${{ env.CHART_CONTAINER }}
           connection_string: ${{ secrets.AZURE_BLOB_CNXN_STRING }}
-          extra_args: '--pattern index.yaml'
+          extra_args: '--pattern *.tgz'
           overwrite: 'true'
       - name: Upload Helm Index
         uses: bacongobbler/azure-blob-storage-upload@main
@@ -77,7 +77,7 @@ jobs:
           source_dir: ./k8s/charts/meerkat-dsa
           container_name: ${{ env.CHART_CONTAINER }}
           connection_string: ${{ secrets.AZURE_BLOB_CNXN_STRING }}
-          extra_args: '--pattern *.tgz'
+          extra_args: '--pattern index.yaml'
           overwrite: 'true'
 
   # TODO: Publish Helm
