--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,13 +41,15 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-          username: wildboarsoftware
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          # username: wildboarsoftware
+          # password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: wildboarsoftware/meerkat-dsa:latest,wildboarsoftware/meerkat-dsa:${{ env.PUBLISHING_MEERKAT_VERSION }}
+          tags: ghcr.io/wildboarsoftware/meerkat-dsa:latest,ghcr.io/wildboarsoftware/meerkat-dsa:${{ env.PUBLISHING_MEERKAT_VERSION }}
 
   helm:
     runs-on: ubuntu-latest
@@ -80,9 +82,9 @@ jobs:
           extra_args: '--pattern index.yaml'
           overwrite: 'true'
 
-  # TODO: Publish Helm
   # TODO: Create Test DIT
   # TODO: Test
+  # TODO: Publish Docusaurus Docs
   deploy:
     runs-on: ubuntu-latest
     needs:
